--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
 <!--            <version>3.0.3</version>-->
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
+
+        <!--		md5加密-->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.6.5</version>
+        </dependency>
     </dependencies>
 
     <build>
